feat: implements user reactions endpoint
