# src/main/java/api/prog5/bookwel/model/BookReaction.java
@@ -1,0 +1,50 @@
+package api.prog5.bookwel.model;
+
+import static jakarta.persistence.EnumType.STRING;
+import static jakarta.persistence.GenerationType.IDENTITY;
+
+import api.prog5.bookwel.endpoint.rest.model.ReactionStatus;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.Table;
+import java.time.Instant;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.ToString;
+import org.hibernate.annotations.CreationTimestamp;
+
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@Entity
+@Getter
+@Setter
+@ToString
+@Table(name = "book_reaction")
+public class BookReaction {
+  @Id
+  @GeneratedValue(strategy = IDENTITY)
+  private String id;
+
+  @Enumerated(STRING)
+  @Column(name = "reaction")
+  private ReactionStatus reaction;
+
+  @ManyToOne
+  @JoinColumn(name = "book_id")
+  private Book book;
+
+  @ManyToOne
+  @JoinColumn(name = "user_id")
+  private User reactor;
+
+  @CreationTimestamp private Instant creationDatetime;
+}
